kubernetes/Amer/cluster-deployment/Deployments/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
