kubernetes/Amer/cluster-deployment/Deployments/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-pihole-web
  namespace: pihole
  labels:
    app: pihole
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ""
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30083
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30084
    protocol: TCP
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: my-pihole-dns-tcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ""
spec:
  type: NodePort
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    nodePort: 30203
    protocol: TCP
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: my-pihole-dns-udp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ""
spec:
  type: NodePort
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    nodePort: 31892
    protocol: UDP
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: my-pihole-dhcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ""
spec:
  type: NodePort
  ports:
  - name: dhcp
    port: 67
    targetPort: 67
    nodePort: 31096
    protocol: UDP
  selector:
    app: pihole
