kubernetes/Amer/cluster-deployment/Deployments/pihole/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-pihole-web
  namespace: pihole
  labels:
    app: pihole
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30083
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30084
    protocol: TCP
  selector:
    app: pihole
